--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <!-- Elemento de Video (Oculto) -->
     <video id="videoElement" crossorigin="anonymous" playsinline style="display:none;">
-        <source src="https://raw.githubusercontent.com/RA8155/STYLIA/main/Armarioabierto%20STYLIA.mp4" type="video/mp4">
+        <source src="https://raw.githubusercontent.com/mardellop/Pantry360/main/PantryChef.mp4" type="video/mp4">
         Tu navegador no soporta el tag de video.
     </video>
 
