--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vídeo 360° Armario de STYLIA</title>
-    <link rel="icon" type="image/png" href="https://github.com/RA8155/STYLIA/blob/main/Stylia%20Logo.jpg?raw=true">
+    <link rel="icon" type="image/png" href="https://github.com/mardellop/Pantry-Chef/blob/main/PantryChef%20Logo.png?raw=true">
     <!-- Configuración y Carga de Tailwind CSS para estilos -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
