--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <!-- CAMBIO: Fondo de la caja a blanco (bg-white) y texto del párrafo a oscuro (text-gray-900) -->
         <div class="p-8 bg-white rounded-xl shadow-2xl max-w-lg text-center border-4 border-custom-gold">
             <!-- Título en color dorado -->
-            <h1 class="text-4xl font-extrabold mb-4 text-custom-gold tracking-wider">Armario STYLIA</h1>
+            <h1 class="text-4xl font-extrabold mb-4 text-custom-gold tracking-wider">PANTRY CHEF</h1>
             
             <!-- CAMBIO: El texto ahora es oscuro (text-gray-900) para ser legible sobre el fondo blanco -->
             <p class="mb-8 text-lg font-medium text-gray-900">
@@ -75,7 +75,7 @@
 
     <!-- Elemento de Video (Oculto) -->
     <video id="videoElement" crossorigin="anonymous" playsinline style="display:none;">
-        <source src="https://raw.githubusercontent.com/mardellop/Pantry360/main/PantryChef.mp4" type="video/mp4">
+        <source src="https://raw.githubusercontent.com/mardellop/Pantry360/main/PantryChef360.mp4" type="video/mp4">
         Tu navegador no soporta el tag de video.
     </video>
 
