--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <!-- Se inicializa con opacity-0 y se hace visible con JS al hacer clic en Reproducir -->
     <div id="image-overlay" class="absolute top-4 right-4 z-20 transition-opacity duration-500 opacity-0 pointer-events-none">
         <!-- El color del placeholder de la imagen se ha cambiado a #daa520 -->
-        <img src="https://github.com/RA8155/STYLIA/blob/main/Stylia%20Logo.jpg?raw=true" 
-             alt="Logo Stylia" 
+        <img src="https://github.com/mardellop/Pantry-Chef/blob/main/PantryChef%20Logo.png?raw=true"" 
+             alt="Logo Pantry Chef" 
              class="rounded-lg shadow-xl w-24 h-24 object-cover" 
              onerror="this.onerror=null;this.src='https://placehold.co/100x100/1F2937/daa520?text=Logo';"
              >
@@ -62,7 +62,7 @@
             
             <!-- CAMBIO: El texto ahora es oscuro (text-gray-900) para ser legible sobre el fondo blanco -->
             <p class="mb-8 text-lg font-medium text-gray-900">
-                Haz clic en “Reproducir” para ver cómo es el armario STYLIA por dentro. Una vez que comience la reproducción, arrastra el ratón o el dedo para mirar alrededor.
+                Descubre cómo funciona la app de Pantry Chef.
             </p>
             
             <!-- Botón de Reproducir en color dorado (se mantiene el texto en gris-900 que es casi negro) -->
