--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 extend: {
                     colors: {
                         // Color dorado transformado a #daa520
-                        'custom-gold': '#daa520',
+                        'custom-gold': '#f5d263',
                     }
                 }
             }
